--- a/style.css
+++ b/style.css
@@ -291,7 +291,37 @@ footer{
 
 }
 
+.container #box1{
+    background-image: url(Imagens/Contador.png);
+    background-position: center;
+    background-size: 320px;
+    
+}
+
+.container #box2{
+    background-image: url(Imagens/Calculadora.png);
+    background-position: center;
+    background-size: 500px;
+}
+
+.container #box3{
+    background-image: url(Imagens/Soundboard.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 490px;
+}
+
+.box{
+    color: white;
+    text-decoration: none;
+}
+
+.container:hover{
+    cursor: pointer;
+    user-select: none;
+}
+
+
 @keyframes slideLeft{
     from{transform: translateX(480%)}
 }
-
